k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: companyfinder-ingress
  namespace: companysearch
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"  # Adjust the size as needed
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: nginx  # Ensure this is exactly the same as your Ingress Controller's class
  rules:
  - host: companyfinder.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: company-search-api
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: customer-portal
            port:
              number: 8080
